--- a/Django/Crispy forms authentication/Login/homepage/templates/homepage/klas_gegevens.html
+++ b/Django/Crispy forms authentication/Login/homepage/templates/homepage/klas_gegevens.html
@@ -51,34 +51,25 @@
             </a>
     {% endif %}
     <!-- Stage Periodes -->
-        <h3>Stage Periodes:</h3>
-        {% if stage_periodes %}
-            <ul>
-                {% for stage_periode in stage_periodes %}
-                    <li>
-                        <strong>{{ stage_periode.stage_soort }}</strong>
-                        <br>
-                        Start Datum: {{ stage_periode.start_datum }}
-                        <br>
-                        Eind Datum: {{ stage_periode.eind_datum }}
-                        <br>
-                        Min Uren: {{ stage_periode.min_uren }}
-                        <br>
-                        Verwachte Uren: {{ stage_periode.verwachte_uren }}
+<h3>Stage Periodes:</h3>
+<ul>
+    {% for stage_periode in stage_periodes %}
+        <li>
+            <!-- Make the stage name a clickable link to detailed stage info -->
+            <a href="{% url 'stage_details' klas_id=klas.id stage_periode_id=stage_periode.id %}">{{ stage_periode.stage_soort }}</a>
+            <br>
+            Start Datum: {{ stage_periode.start_datum }}
+            <br>
+            Eind Datum: {{ stage_periode.eind_datum }}
+            <br>
+            Min Uren: {{ stage_periode.min_uren }}
+            <br>
+            Verwachte Uren: {{ stage_periode.verwachte_uren }}
+            <br>
 
-                    {% if user.role == "Docent" %}
-                        <form method="post" action="{% url 'delete_stage_periode' klas.id stage_periode.id %}" style="display: inline;">
-                            {% csrf_token %}
-                            <button type="submit">Delete</button>
-                        </form>
-                    {% endif %}
-                    </li>
-                {% endfor %}
-            </ul>
-        {% else %}
-            <p>Er zijn geen stageperiodes beschikbaar voor deze klas.</p>
-        {% endif %}
-
+        </li>
+    {% endfor %}
+</ul>
 
 <h3>Studenten:</h3>
 <ul>
