--- a/Django/Crispy forms authentication/Login/homepage/templates/homepage/student_home.html
+++ b/Django/Crispy forms authentication/Login/homepage/templates/homepage/student_home.html
@@ -19,6 +19,15 @@
         <p>Geen Klassen</p>
     {% endif %}
 
+<a href="{% url 'add_company' %}">Add Company</a>
+<br>
+<a href="{% url 'list_companies' %}">List Companies</a>
+<br>
+<br>
+
+
+
+
     <button type="submit"> <a href="{% url 'sign_out' %}"> Sign-out</a> </button>
 
 </body>
