--- a/Django/Crispy forms authentication/Login/homepage/templates/homepage/docent_home.html
+++ b/Django/Crispy forms authentication/Login/homepage/templates/homepage/docent_home.html
@@ -30,6 +30,10 @@
 {% endif %}
 
 <p><a href="{% url 'create_klas' %}">Maak een nieuwe klas</a></p>
+
+<a href="{% url 'add_company' %}">Add Company</a>
+<a href="{% url 'list_companies' %}">List Companies</a>
+<br>
 <button type="submit"> <a href="{% url 'sign_out' %}"> Sign-out</a> </button>
 
 </body>
