--- a/Django/Music_player/Jukebox/app/templates/app/home.html
+++ b/Django/Music_player/Jukebox/app/templates/app/home.html
@@ -15,9 +15,9 @@
     <h1 class="Jukebox">Jukebox</h1>
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="{% url 'Home' %}">Home</a></li>
             <li><a href="#">Playlists</a></li>
-            <li><a href="#" class="logout">Log out</a></li>
+            <li><a href="sign_out" class="logout">Log out</a></li>
         </ul>
     </nav>
 </header>
