--- a/Django/Music_player/Jukebox/static/css/home.css
+++ b/Django/Music_player/Jukebox/static/css/home.css
@@ -33,20 +33,49 @@ a {
 a.logout {
     margin-left: 200px;
 }
+.genre_parent_container{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+.genre_container{
+    display: flex;
+    border: 10px solid #2c5c64;
+    border-radius: 50px;
+    background-color: #2c5c64;
+    margin:20px 50px 20px 50px;
+    width: 250px;
+    height: 250px;
+}
+.genre_box{
+    display: block;
+    border: 1px solid black;
+    border-radius: 35px;
+    width: 100%;
+    margin: 0 1px 0 1px;
+    padding: 10px;
+    background-color: white;
+
+}
+
+.genre_image{
+    border-radius: 15px;
+    width: 100%;
+    height: 85%;
+    margin:auto;
+    margin-bottom: -15px;
+}
 
 .genre_name {
     color:black;
+    font-size: 20px;
+    margin-left: 5px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
 }
 
-.genre_box{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin-top: 20px;
-    border: 1px solid black;
-}
-
-.Song_box {
+.song_box {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
