--- a/Django/Dashboard_ASVZ/Dashboard_ASVZ/authentication/templates/authentication/index.html
+++ b/Django/Dashboard_ASVZ/Dashboard_ASVZ/authentication/templates/authentication/index.html
@@ -23,7 +23,7 @@
         <div class="form sign_in">
             {% for message in messages %}
 
-               <button type="button" class="btn btn-success" style="background-color: #427BA2; margin-bottom: 20px; ">
+               <button type="button" class="btn btn-success" style="background-color: #103561; margin-bottom: 20px; ">
                     <svg  onclick="this.parentElement.style.display='none';" xmlns="http://www.w3.org/2000/svg" width="14" height="16" fill="currentColor" class="bi bi-x-circle-fill" viewBox="0 0 14 16">
                         <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293 5.354 4.646z"></path>
                     </svg>
@@ -80,7 +80,7 @@
 
     <div class="overlay">
         <div class="page page_signIn">
-            <img class="logo_1" src="{% static '/images/logo.png'%}" >
+            <img class="logo_1" src="{% static '/images/ASVZ_logo.jpg'%}" >
             <h3>Welkom terug!</h3>
          <p>Om bij ons te blijven, logt u in met uw persoonlijke gegevens</p>
 
@@ -88,7 +88,7 @@
         </div>
 
         <div class="page page_signUp">
-            <img class="logo_2" src="{% static '/images/logo.png'%}" >
+            <img class="logo_2" src="{% static '/images/ASVZ_logo.jpg'%}" >
             <h3>Welkom!</h3>
             <p>Voer uw persoonlijke gegevens in en begin uw reis met ons</p>
 
