--- a/Django/Dashboard_ASVZ/Dashboard_ASVZ/static/css/home.css
+++ b/Django/Dashboard_ASVZ/Dashboard_ASVZ/static/css/home.css
@@ -1,3 +1,10 @@
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    margin: 0;
+}
+
 header{
     background-color: #103561;
     padding: 20px;
@@ -22,6 +29,7 @@ img {
 }
 
 .container{
+    flex: 1;
     margin:30px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -36,5 +44,16 @@ img {
     padding:10px;
     width: 250px;
     height: 80px;
+}
+
+footer {
+    border: 3px solid #d91279;
+    border-radius: 20px;
+    background-color: #103561;
+    color: white;
+    padding: 20px;
+    width: 400px;
+    align-self: center;
+    margin-bottom: 20px;
 }
 
